<resources>
    <string name="app_name">Sample Images Downloader</string>
    <string name="action_settings">Settings</string>
    <string name="error_not_connected_to_the_internet">Not connected to the Internet</string>
    <string name="error_network_request_timeout">Failed to get response from the server</string>
    <string name="error_not_authenticated">Not authenticated</string>
    <string name="error_on_server_side">Server encountered an error</string>
    <string name="error_on_network_side">Network encountered an error</string>
    <string name="error_response_does_not_meet_the_request">Response does not meet the request</string>
    <string name="requestOfString">Request a String</string>
    <string name="requestOfJsonObject">Request a JsonObject</string>
    <string name="requestOfJsonArray">Request a JsonArray</string>
    <string name="requestOfImage">Request an Image</string>
    <string name="requestOfStringExtended">Request a String (Extended)</string>
    <string name="requestOfFile">Request a File</string>
    <string name="usingGet">Using Get</string>
    <string name="usingPost">Using Post</string>
    <string name="enter_your_test_url">Enter your test URL</string>
    <string name="enter_your_test_url_string">Enter your test URL with any String response</string>
    <string name="enter_your_test_url_json">Enter your test URL with any JSON response</string>
    <string name="enter_your_test_url_json_array">Enter your test URL with any JSON Array response</string>
    <string name="enter_your_test_url_image">Enter your test URL for any image</string>
    <string name="enter_your_test_url_file">Enter your test URL for any file</string>
    <string name="image">image</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="saved_in_downloads">Saved in downloads</string>
    <string name="failed_to_save_file">Failed to save the file</string>
</resources>
