<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestImageActivity">

    <EditText
        android:id="@+id/urlImageRequest"
        android:hint="@string/enter_your_test_url_image"
        android:inputType="textUri"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ExampleEditText" />

    <Button
        android:id="@+id/getImageRequest"
        android:onClick="get"
        android:text="@string/usingGet"
        android:layout_margin="32dp"
        android:layout_width="150dp"
        app:layout_constraintTop_toBottomOf="@id/urlImageRequest"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/ExampleButton" />

    <Button
        android:id="@+id/postImageRequest"
        android:onClick="post"
        android:text="@string/usingPost"
        android:layout_margin="32dp"
        android:layout_width="150dp"
        app:layout_constraintTop_toBottomOf="@id/urlImageRequest"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ExampleButton" />

    <ImageView
        android:id="@+id/responseImageRequest"
        android:layout_margin="32dp"
        app:layout_constraintTop_toBottomOf="@id/getImageRequest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cancelImageRequest"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>
